<resources>
    <string name="text_apply_now">Apply Now</string>
    <string name="get_in_touch">Get in touch</string>
    <string name="applicant_name">Applicant name</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="father_or_husband_name">Father/Husband\'s Name</string>
    <string name="learn_more"><u>Learn more…</u></string>
    <string name="text_pan">PAN Card No</string>
    <string name="text_dob">Date of birth</string>
    <string name="text_present_address">Address</string>
    <string name="address_line_one_hint">Address Line 1</string>
    <string name="address_line_two_hint">Address Line 2</string>
    <string name="text_city_location">City/Location</string>
    <string name="text_postal_code">Postal PIN</string>
    <string name="text_district">District</string>
    <string name="text_state">State</string>
    <string name="text_country">Country</string>
    <string name="pin_code_hint">PIN Code</string>
    <string name="text_permanent_address">Permanent address</string>
    <string name="marital_status">Marital Status</string>
    <string name="text_unmarried">Unmarried</string>
    <string name="text_married">Married</string>
    <string name="text_no_of_depends">Number of Dependents in Household</string>
    <string name="zero" translatable="false">0</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_other">Other</string>
    <string name="text_residence_ownership">Residence Ownership</string>
    <string name="text_select_residence">Select Residence</string>
    <string name="text_select_borrower">Select borrower</string>
    <string name="text_select_qualification">Select Qualification</string>
    <string name="text_edu_below_10">Below 10</string>
    <string name="text_10th_pass">10th Pass</string>
    <string name="text_12th_pass">12th Pass</string>
    <string name="text_edu_graduation">Graduation</string>
    <string name="text_edu_post_graduation">Post Graduation</string>
    <string name="text_edu_phd">Ph.D</string>
    <string name="text_edu_post_diploma">Diploma</string>
    <string name="text_edu_none">None</string>
    <string name="residence_other">Other</string>
    <string name="residence_owned_self">Owned (Self/Spouse)</string>
    <string name="residence_owned_parent">Owned (Parent)</string>
    <string name="borrower_self_employed">Self-employed</string>
    <string name="borrower_service">Service</string>
    <string name="collateral_property">Property</string>
    <string name="collateral_policy">NSC/LIC Policy</string>
    <string name="collateral_other">Other</string>
    <string name="collateral_none">None</string>
    <string name="member_0_to_3" translatable="false">0-3</string>
    <string name="member_4_to_5" translatable="false">4-5</string>
    <string name="member_6_to_8" translatable="false">6-8</string>
    <string name="member_9_to_10" translatable="false">9-10</string>
    <string name="member_more_than_10">More than 10</string>
    <string name="text_type_of_borrower">Type of borrower</string>
    <string name="text_req_loan_amount">Required loan amount</string>
    <string name="text_loan_amount">Loan amount</string>
    <string name="text_annual_income">Annual income</string>
    <string name="text_gross_annual_income">Gross annual income</string>
    <string name="text_other_loan">Any other loan taken</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="hint_taken_loan_amount">Total Amount of Existing Loans</string>
    <string name="text_year_of_residence">Years at current residence</string>
    <string name="text_year">Total year</string>
    <string name="text_loan_security">Collateral security provided?</string>
    <string name="text_type_of_collateral">Type of collateral</string>
    <string name="text_select_collateral">Select collateral</string>
    <string name="collateral_other_no">Other collateral no</string>
    <string name="earning_member_name">Earning Member Name</string>
    <string name="text_earning_member_msg">If any, in family excluding applicant</string>
    <string name="text_qualification_education">Qualification/Education</string>
    <string name="text_mobile_no">Mobile No</string>
    <string name="text_email_id">Email ID</string>
    <string name="text_whatsapp_no">Whatsapp No</string>
    <string name="text_telephone_no">Telephone No</string>
    <string name="text_residence">Residence</string>
    <string name="std_code_hint">STD CODE</string>
    <string name="telephone_no_hint">TELEPHONE NO</string>
    <string name="text_office">Office</string>
    <string name="text_other_mobile_no">Other Mobile No</string>
    <string name="text_same_as_present">Same as present</string>
    <string name="text_same_as_mobile_no">Same as mobile no</string>
    <string name="applicant_pan">Upload PAN Card</string>
    <string name="applicant_dl">Upload Driving Licence</string>
    <string name="applicant_aadhaar">Upload Aadhaar Card</string>
    <string name="phone_hint" translatable="false">9876543210</string>
    <string name="email_hint" translatable="false">example@email.com</string>
    <string name="text_miss_call">Miss call</string>
    <string name="text_give_us_a">Give us a</string>
    <string name="text_or">OR</string>
    <string name="text_loan_terms_and_condition">I have read and agree to the Terms and Conditions.</string>
    <string name="text_select_pan">Select PAN</string>
    <string name="text_select_aadhaar_front">Select Aadhaar front</string>
    <string name="text_select_aadhaar_back">Select Aadhaar back</string>
    <string name="text_complete_your_basic_kyc">Complete your basic KYC</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="select_file">Select from</string>
    <string name="text_loan_terms_error">Accept terms and conditions to start loan application</string>
    <string name="error_gender">Select your gender</string>
    <string name="error_other_loan">Select "Yes" if any other loan is taken</string>
    <string name="back_dialog_message">Are you sure you want to dismiss the loan application process?\nDismissing the application will cancel the current progress, and you will need to start the process again if you wish to apply for a loan in the future.\nTo proceed with dismissing the loan application process, click \"Dismiss\" Otherwise, click \"Cancel\" to continue with the application.</string>
    <string name="hint_collateral_value">Collateral value</string>
    <string name="text_pan_verified">PAN Card verified</string>
    <string name="text_select_dl">Select driving licence</string>
    <string name="loan_step_1">Basic\nKYC</string>
    <string name="loan_step_2">Loan\nDetail</string>
    <string name="loan_step_3">Personal\nDetail</string>
    <string name="loan_step_4">Video\nVerification</string>
    <string name="loan_step_5">Advance\nKYC</string>
    <string name="loan_state_1">Applied</string>
    <string name="loan_state_2">Received</string>
    <string name="loan_state_3">Verification</string>
    <string name="loan_state_4">Approved</string>
    <string name="loan_state_5">Rejected</string>
    <string name="loan_state_6">Active</string>
    <string name="verifying_pan_card">Verifying PAN Card</string>
    <string name="verifying_aadhaar_front">Verifying Aadhaar Card</string>
    <string name="verifying_dl">Verifying driving licence</string>
    <string name="text_select_depends">Select members</string>
    <string name="text_address">Address</string>
    <string name="text_doe">Date of expiry</string>
    <string name="text_mandatory_doc">Mandatory documents</string>
    <string name="text_optional_doc">Optional documents</string>
    <string name="loan_doc">Loan document</string>
    <string name="text_select_loan_doc">Upload loan document</string>
    <string name="text_dialog_username">Dear %1$s!</string>
    <string name="pending_loan_dialog_message">We noticed that you had started a loan application with us previously but did not complete the process.\nTo continue your application, simply click on \"Continue\" button below.\nIf you encounter any issues or have any questions during the process, please don\'t hesitate to contact our customer support team. We are here to assist you every step of the way.</string>
    <string name="text_apply_new">Apply new</string>
    <string name="text_contact_us"><u>Contact us…</u></string>
    <string name="loan_application_canceled">Loan application canceled</string>
    <string name="loading_loan_details">Loading loan details...</string>
    <string name="finishing_loan_application">Finishing loan application</string>
    <string name="loan_applied">Loan applied</string>
    <string name="msg_means_of_earning">Select your means of earning</string>
    <string name="msg_enter_loan_amount">Enter loan amount</string>
    <string name="msg_enter_annual_income">Enter annual income</string>
    <string name="msg_household_depends">Select members of household</string>
    <string name="msg_collateral">Select type of collateral</string>
    <string name="msg_collateral_type">Enter collateral type</string>
    <string name="msg_loan_amount">Enter loan amount</string>
    <string name="saving_details">Saving details…</string>
    <string name="select_file_from">Select file from</string>
    <string name="msg_qualification">Select your qualification</string>
    <string name="msg_marital_status">Select your marital status</string>
    <string name="msg_gender">Select your gender</string>
    <string name="msg_residence_ownership">Select residence ownership</string>
    <string name="msg_enter_residence_ownership">Enter your residence ownership</string>
    <string name="msg_year_of_residence">Select year of residence</string>
    <string name="checking_for_document">Checking for loan document…</string>
    <string name="msg_current_address">Enter your current address</string>
    <string name="msg_current_city">Enter your current city</string>
    <string name="msg_pin_code">Enter your current area PIN CODE</string>
    <string name="msg_valid_pin_code">Enter valid PIN CODE</string>
    <string name="msg_district_name">Enter your current district name</string>
    <string name="msg_state_name">Enter your current state name</string>
    <string name="msg_country_name">Enter country name</string>
    <string name="saving_address_details">Saving address details...</string>
    <string name="verify_bank_details">Verifying bank details…</string>
    <string name="loan_applied_successfully">Loan Applied Successfully</string>
    <string name="apply_loan_title">Get \nInstant Loans \nWith Just Few Steps</string>
    <string name="apply_loan_message">Apply for a loan in just a few simple steps! Our fast and easy online application process is designed to get you the funds you need quickly and conveniently.</string>
    <string name="dismiss_the_loan">Dismiss the loan application process</string>
    <string name="current_score">Current score</string>
    <string name="text_apply_loan">Apply Loan</string>
    <string name="text_no_of_kids">Number of Kids in the Family</string>
    <string name="text_select_kids">Select kids</string>
    <string name="text_no_of_family_member">Number of family members</string>
    <string name="text_kids_in_college">Number of Kids Attending Schools/College</string>
    <string name="text_no_of_girl">Number of Girl Children in the Family</string>
    <string name="text_house_location">Location of house</string>
    <string name="text_main_road">Main road</string>
    <string name="text_inside_colony">Inside colony</string>
    <string name="number_of_earning_member">Number of Earning Member</string>
</resources>