<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.ApplicantDetailsFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_qualification_education" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/qualification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_select_qualification"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_gender" />

                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioMale"
                        style="@style/RadioButtonStyleGender"
                        android:layout_weight="1"
                        android:tag="M"
                        android:text="@string/text_male" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioFemale"
                        style="@style/RadioButtonStyleGender"
                        android:layout_marginStart="@dimen/large"
                        android:layout_weight="1"
                        android:tag="F"
                        android:text="@string/text_female" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioOther"
                        style="@style/RadioButtonStyleGender"
                        android:layout_marginStart="@dimen/large"
                        android:layout_weight="1"
                        android:tag="O"
                        android:text="@string/text_other" />

                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/marital_status" />

                <RadioGroup
                    android:id="@+id/radioGroupMarital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioUnMarried"
                        style="@style/RadioButtonStyleGender"
                        android:layout_weight="1"
                        android:tag="Unmarried"
                        android:text="@string/text_unmarried" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioMarried"
                        style="@style/RadioButtonStyleGender"
                        android:layout_marginStart="@dimen/large"
                        android:layout_weight="1"
                        android:tag="Married"
                        android:text="@string/text_married" />

                </RadioGroup>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_residence_ownership" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/residenceOwnership"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_select_residence"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/residenceOwnershipOther"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/residence_other"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_year_of_residence" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/yearOfResidence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_year"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNext"
                    style="@style/ButtonStyleDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/xx_large"
                    android:layout_marginBottom="@dimen/xx_large"
                    android:text="@string/text_next" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
