<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.LoanDetailFragment">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_type_of_borrower" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/typeOfBorrower"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_select_borrower"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_req_loan_amount" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loanAmount"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:hint="@string/text_loan_amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_gross_annual_income" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/annualIncome"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_annual_income"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_no_of_depends" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/householdDepends"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_select_depends"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/number_of_earning_member" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppRegular.ViewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="@string/text_earning_member_msg" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtNumberOfEarningMember"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_earning_member_msg"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emLastName"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:hint="@string/last_name_hint"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_type_of_collateral" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AutoCompleteTextViewOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/typeOfCollateral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_select_collateral"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/collateralOther"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/collateral_other_no"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:text="@string/text_other_loan" />

                <RadioGroup
                    android:id="@+id/radioGroupOtherLoan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioYes"
                        style="@style/RadioButtonStyleGender"
                        android:layout_weight="1"
                        android:tag="Y"
                        android:text="@string/text_yes" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioNo"
                        style="@style/RadioButtonStyleGender"
                        android:layout_marginStart="@dimen/large"
                        android:layout_weight="1"
                        android:tag="N"
                        android:text="@string/text_no" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otherLoanAmount"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_taken_loan_amount"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/otherLoanError"
                    style="@style/TextAppRegular.ViewStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/error_other_loan"
                    android:textColor="?colorError"
                    android:visibility="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonNext"
                    style="@style/ButtonStyleDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/xx_large"
                    android:layout_marginBottom="@dimen/full"
                    android:text="@string/text_next" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>